src/objects/PM_Composition__c.object
<CustomObject>
    <fields>
        <fullName>CAS_Description__c</fullName>
        <formula>Regulatory__r.CAS_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAS Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS__c</fullName>
        <formula>Regulatory__r.CAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Inventory__c</fullName>
        <formula>Regulatory__r.EC_Inventory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Inventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IECSC__c</fullName>
        <formula>Regulatory__r.IECSC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IECSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Compositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RegID__c</fullName>
        <formula>Regulatory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAS Record ID</label>
        <referenceTo>Reg_Inventory__c</referenceTo>
        <relationshipLabel>PM Compositions</relationshipLabel>
        <relationshipName>Compositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TSCA__c</fullName>
        <formula>Regulatory__r.TSCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSCA</label>
        <type>Text</type>
    </fields>
    <label>PM Composition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>Percent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Composition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Compositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SingleCASTotalPercent</fullName>
        <active>true</active>
        <description>Single CAS Total Percent must be 100%</description>
        <errorConditionFormula>Percent__c &gt; 1</errorConditionFormula>
        <errorMessage>Total for a single CAS is more than 100%</errorMessage>
    </validationRules>
</CustomObject>